--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,8 @@
-version: "3.8"
-
 services:
   app:
     build: .
     container_name: fastapi_app
-    env_file: .env
+    env_file: .env.prod
     depends_on:
       db:
         condition: service_healthy
@@ -14,28 +12,11 @@ services:
       - mynetwork
     environment:
       - PYTHONPATH=/app
-
-  db:
-    image: mysql:8.0
-    container_name: mysql_db
-    env_file: .env
-    environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      MYSQL_DATABASE: ${DB_NAME}
-      MYSQL_USER: ${DB_USERNAME}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
-    ports:
-      - "3307:3306"
-    networks:
-      - mynetwork
-    volumes:
-      - db_data:/var/lib/mysql
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      interval: 10s
-      retries: 5
-      start_period: 10s
-      timeout: 5s
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_USERNAME=${DB_USERNAME}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
 
 networks:
   mynetwork:
