--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name server.surver-josha.site;
+    server_name server.survey-josha.site;
 
     location / {
         proxy_pass http://fastapi_app:8000;
@@ -13,7 +13,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name server.surver-josha.site;
+    server_name server.survey-josha.site;
 
     ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
