--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,19 +11,19 @@ server {
     }
 }
 
-server {
-    listen 443 ssl;
-    server_name server.survey-josha.site;
+# server {
+#     listen 443 ssl;
+#     server_name server.survey-josha.site;
 
-    ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
-    include /etc/nginx/ssl-params.conf;
+#     ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
+#     include /etc/nginx/ssl-params.conf;
 
-    location / {
-        proxy_pass http://fastapi_app:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
+#     location / {
+#         proxy_pass http://fastapi_app:8000;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+# }
