--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name server.survey-josha.site;
 
-    location / {
+    location /api {
         proxy_pass http://fastapi_app:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -19,7 +19,7 @@ server {
 #     ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
 #     include /etc/nginx/ssl-params.conf;
 
-#     location / {
+#     location /api {
 #         proxy_pass http://fastapi_app:8000;
 #         proxy_set_header Host $host;
 #         proxy_set_header X-Real-IP $remote_addr;
