--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/ssl-params.conf:/etc/nginx/ssl-params.conf:ro
-
+    command: ["nginx", "-g", "daemon off;"]
     depends_on:
       app:
         condition: service_healthy
