--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,40 @@
-server {
-    listen 80;
-    server_name server.survey-josha.site;
+events {}
 
-    location /api {
-        proxy_pass http://fastapi_app:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    # SSL 설정 포함 (필요 시)
+    # include /etc/nginx/ssl-params.conf;
+
+    server {
+        listen 80;
+        server_name server.survey-josha.site;
+
+        location / {
+            proxy_pass http://fastapi_app:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
+
+    # SSL을 사용하려면 다음처럼 설정 가능
+    # server {
+    #     listen 443 ssl;
+    #     server_name server.survey-josha.site;
+    #
+    #     ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
+    #     ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
+    #     include /etc/nginx/ssl-params.conf;
+    #
+    #     location / {
+    #         proxy_pass http://fastapi_app:8000;
+    #         proxy_set_header Host $host;
+    #         proxy_set_header X-Real-IP $remote_addr;
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #         proxy_set_header X-Forwarded-Proto $scheme;
+    #     }
+    # }
 }
