--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     depends_on:
       app:
         condition: service_healthy
+    networks:
+      - mynetwork
 
   app:
     build: .
